---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/reference/control_flow/switch.qasm
expect-lex: Ok
--- source ---
// lex: ok
// parse: ok
// sema: ok

include "stdgates.inc";

int i = 1;
int j = 2;
int k = 3;

switch (i) {
  case 0 {
    x $0;
  }
  case 1, 2 {
    x $0;
    z $1;
  }
  case 3, {
  }
  default {
    cx $0, $1;
  }
}

switch (i + j) {
  default {
    switch (2 * k) {
      case 0 {
        x $0;
      }
      default {
        z $0;
      }
    }
  }
}
--- lexer ---
ok: true
errors: 0
[0] LineComment "// lex: ok" @0..10
[1] Whitespace "\n" @10..11
[2] LineComment "// parse: ok" @11..23
[3] Whitespace "\n" @23..24
[4] LineComment "// sema: ok" @24..35
[5] Whitespace "\n\n" @35..37
[6] Ident "include" @37..44
[7] Whitespace " " @44..45
[8] Literal { kind: Str { terminated: true }, suffix_start: 14 } ""stdgates.inc"" @45..59
[9] Semi ";" @59..60
[10] Whitespace "\n\n" @60..62
[11] Ident "int" @62..65
[12] Whitespace " " @65..66
[13] Ident "i" @66..67
[14] Whitespace " " @67..68
[15] Eq "=" @68..69
[16] Whitespace " " @69..70
[17] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @70..71
[18] Semi ";" @71..72
[19] Whitespace "\n" @72..73
[20] Ident "int" @73..76
[21] Whitespace " " @76..77
[22] Ident "j" @77..78
[23] Whitespace " " @78..79
[24] Eq "=" @79..80
[25] Whitespace " " @80..81
[26] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @81..82
[27] Semi ";" @82..83
[28] Whitespace "\n" @83..84
[29] Ident "int" @84..87
[30] Whitespace " " @87..88
[31] Ident "k" @88..89
[32] Whitespace " " @89..90
[33] Eq "=" @90..91
[34] Whitespace " " @91..92
[35] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @92..93
[36] Semi ";" @93..94
[37] Whitespace "\n\n" @94..96
[38] Ident "switch" @96..102
[39] Whitespace " " @102..103
[40] OpenParen "(" @103..104
[41] Ident "i" @104..105
[42] CloseParen ")" @105..106
[43] Whitespace " " @106..107
[44] OpenBrace "{" @107..108
[45] Whitespace "\n  " @108..111
[46] Ident "case" @111..115
[47] Whitespace " " @115..116
[48] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "0" @116..117
[49] Whitespace " " @117..118
[50] OpenBrace "{" @118..119
[51] Whitespace "\n    " @119..124
[52] Ident "x" @124..125
[53] Whitespace " " @125..126
[54] HardwareIdent "$0" @126..128
[55] Semi ";" @128..129
[56] Whitespace "\n  " @129..132
[57] CloseBrace "}" @132..133
[58] Whitespace "\n  " @133..136
[59] Ident "case" @136..140
[60] Whitespace " " @140..141
[61] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @141..142
[62] Comma "," @142..143
[63] Whitespace " " @143..144
[64] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @144..145
[65] Whitespace " " @145..146
[66] OpenBrace "{" @146..147
[67] Whitespace "\n    " @147..152
[68] Ident "x" @152..153
[69] Whitespace " " @153..154
[70] HardwareIdent "$0" @154..156
[71] Semi ";" @156..157
[72] Whitespace "\n    " @157..162
[73] Ident "z" @162..163
[74] Whitespace " " @163..164
[75] HardwareIdent "$1" @164..166
[76] Semi ";" @166..167
[77] Whitespace "\n  " @167..170
[78] CloseBrace "}" @170..171
[79] Whitespace "\n  " @171..174
[80] Ident "case" @174..178
[81] Whitespace " " @178..179
[82] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3" @179..180
[83] Comma "," @180..181
[84] Whitespace " " @181..182
[85] OpenBrace "{" @182..183
[86] Whitespace "\n  " @183..186
[87] CloseBrace "}" @186..187
[88] Whitespace "\n  " @187..190
[89] Ident "default" @190..197
[90] Whitespace " " @197..198
[91] OpenBrace "{" @198..199
[92] Whitespace "\n    " @199..204
[93] Ident "cx" @204..206
[94] Whitespace " " @206..207
[95] HardwareIdent "$0" @207..209
[96] Comma "," @209..210
[97] Whitespace " " @210..211
[98] HardwareIdent "$1" @211..213
[99] Semi ";" @213..214
[100] Whitespace "\n  " @214..217
[101] CloseBrace "}" @217..218
[102] Whitespace "\n" @218..219
[103] CloseBrace "}" @219..220
[104] Whitespace "\n\n" @220..222
[105] Ident "switch" @222..228
[106] Whitespace " " @228..229
[107] OpenParen "(" @229..230
[108] Ident "i" @230..231
[109] Whitespace " " @231..232
[110] Plus "+" @232..233
[111] Whitespace " " @233..234
[112] Ident "j" @234..235
[113] CloseParen ")" @235..236
[114] Whitespace " " @236..237
[115] OpenBrace "{" @237..238
[116] Whitespace "\n  " @238..241
[117] Ident "default" @241..248
[118] Whitespace " " @248..249
[119] OpenBrace "{" @249..250
[120] Whitespace "\n    " @250..255
[121] Ident "switch" @255..261
[122] Whitespace " " @261..262
[123] OpenParen "(" @262..263
[124] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "2" @263..264
[125] Whitespace " " @264..265
[126] Star "*" @265..266
[127] Whitespace " " @266..267
[128] Ident "k" @267..268
[129] CloseParen ")" @268..269
[130] Whitespace " " @269..270
[131] OpenBrace "{" @270..271
[132] Whitespace "\n      " @271..278
[133] Ident "case" @278..282
[134] Whitespace " " @282..283
[135] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "0" @283..284
[136] Whitespace " " @284..285
[137] OpenBrace "{" @285..286
[138] Whitespace "\n        " @286..295
[139] Ident "x" @295..296
[140] Whitespace " " @296..297
[141] HardwareIdent "$0" @297..299
[142] Semi ";" @299..300
[143] Whitespace "\n      " @300..307
[144] CloseBrace "}" @307..308
[145] Whitespace "\n      " @308..315
[146] Ident "default" @315..322
[147] Whitespace " " @322..323
[148] OpenBrace "{" @323..324
[149] Whitespace "\n        " @324..333
[150] Ident "z" @333..334
[151] Whitespace " " @334..335
[152] HardwareIdent "$0" @335..337
[153] Semi ";" @337..338
[154] Whitespace "\n      " @338..345
[155] CloseBrace "}" @345..346
[156] Whitespace "\n    " @346..351
[157] CloseBrace "}" @351..352
[158] Whitespace "\n  " @352..355
[159] CloseBrace "}" @355..356
[160] Whitespace "\n" @356..357
[161] CloseBrace "}" @357..358
[162] Whitespace "\n" @358..359
